--- a/gfwlist-ss.conf
+++ b/gfwlist-ss.conf
@@ -8,10 +8,13 @@ loglevel = notify
 Proxy = custom,127.0.0.1,1080,aes-256-cfb,your_password_here,https://github.com/R0uter/ss.conf-for-surge/raw/master/ss.module
 
 [Rule]
+//for Google blogspot 
+DOMAIN-KEYWORD google,Proxy,force-remote-dns
+DOMAIN-KEYWORD blogspot,Proxy,force-remote-dns
 
 // AD Block
 // thx  https://gist.github.com/iyee/2e27c124af2f7a4f0d5a 
-// updated on 2016-02-02 02:01:09
+// updated on 2016-02-04 14:11:03
 
 DOMAIN,syndication.twitter.com,REJECT
 DOMAIN,adlog.flurry.com,REJECT
@@ -199,7 +202,7 @@ DOMAIN-SUFFIX,amazon-adsystem.com,REJECT
 
 // proxy list from gfwlist!
 // SS config file for surge with gfw list 
-// updated on 2016-02-02 02:01:05
+// updated on 2016-02-04 14:10:48
 
 DOMAIN-SUFFIX,85.17.73.31,Proxy,force-remote-dns
 DOMAIN-SUFFIX,agnesb.fr,Proxy,force-remote-dns
