--- a/ss.conf/gfwlist_ss.conf
+++ b/ss.conf/gfwlist_ss.conf
@@ -14,7 +14,7 @@ DOMAIN-KEYWORD,blogspot,Proxy,force-remote-dns
 
 // AD Block
 // thx  https://gist.github.com/iyee/2e27c124af2f7a4f0d5a 
-// updated on 2016-02-20 19:29:29
+// updated on 2016-02-28 23:02:00
 
 DOMAIN,syndication.twitter.com,REJECT
 DOMAIN,adlog.flurry.com,REJECT
@@ -202,7 +202,7 @@ DOMAIN-SUFFIX,amazon-adsystem.com,REJECT
 
 // proxy list from gfwlist!
 // SS config file for surge with gfw list 
-// updated on 2016-02-20 19:29:18
+// updated on 2016-02-28 23:01:51
 
 DOMAIN-SUFFIX,85.17.73.31,Proxy,force-remote-dns
 DOMAIN-SUFFIX,agnesb.fr,Proxy,force-remote-dns
@@ -248,6 +248,7 @@ DOMAIN-SUFFIX,javhuge.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,javlibrary.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,juliepost.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kawaiikawaii.jp,Proxy,force-remote-dns
+DOMAIN-SUFFIX,longtoes.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,www.m-sport.co.uk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,macgamestore.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,madonna-av.com,Proxy,force-remote-dns
@@ -370,6 +371,7 @@ DOMAIN-SUFFIX,12bet.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,12vpn.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,12vpn.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,141hongkong.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,141tube.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,1688.com.au,Proxy,force-remote-dns
 DOMAIN-SUFFIX,173ng.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,17t17p.com,Proxy,force-remote-dns
@@ -537,6 +539,7 @@ DOMAIN-SUFFIX,army.mil,Proxy,force-remote-dns
 DOMAIN-SUFFIX,artsy.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,asahichinese.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,asdfg.jp,Proxy,force-remote-dns
+DOMAIN-SUFFIX,asg.to,Proxy,force-remote-dns
 DOMAIN-SUFFIX,japanfirst.asianfreeforum.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,asiaharvest.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,asianews.it,Proxy,force-remote-dns
@@ -1232,6 +1235,7 @@ DOMAIN-SUFFIX,fanswong.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fanyue.info,Proxy,force-remote-dns
 DOMAIN-SUFFIX,farwestchina.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,en.favotter.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,rnw.global.ssl.fastly.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,faststone.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,favstar.fm,Proxy,force-remote-dns
 DOMAIN-SUFFIX,faydao.com,Proxy,force-remote-dns
@@ -1313,6 +1317,7 @@ DOMAIN-SUFFIX,kineox.free.fr,Proxy,force-remote-dns
 DOMAIN-SUFFIX,puttycm.free.fr,Proxy,force-remote-dns
 DOMAIN-SUFFIX,freealim.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,whitebear.freebearblog.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,freebrowser.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,freechal.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,freedomchina.info,Proxy,force-remote-dns
 DOMAIN-SUFFIX,freedomhouse.org,Proxy,force-remote-dns
@@ -2469,6 +2474,7 @@ DOMAIN-SUFFIX,placemix.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,pictures.playboy.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,playboy.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,playboyplus.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,playno1.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,playpcesor.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,plays.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,m.plixi.com,Proxy,force-remote-dns
@@ -2704,7 +2710,6 @@ DOMAIN-SUFFIX,sakuralive.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,salvation.org.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,samair.ru,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sambhota.org,Proxy,force-remote-dns
-DOMAIN-SUFFIX,sammyjs.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sankaizok.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sanmin.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sapikachu.net,Proxy,force-remote-dns
@@ -2717,6 +2722,8 @@ DOMAIN-SUFFIX,savetibet.ru,Proxy,force-remote-dns
 DOMAIN-SUFFIX,savevid.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,say2.info,Proxy,force-remote-dns
 DOMAIN-SUFFIX,www.sciencemag.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,sciencenets.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,scihub.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,scmp.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,scmpchinese.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,scribd.com,Proxy,force-remote-dns
@@ -3432,6 +3439,7 @@ DOMAIN-SUFFIX,versavpn.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,verybs.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,vft.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,viber.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,vica.info,Proxy,force-remote-dns
 DOMAIN-SUFFIX,victimsofcommunism.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,vid.me,Proxy,force-remote-dns
 DOMAIN-SUFFIX,videobam.com,Proxy,force-remote-dns
