update for sub_config

--- a/ss.conf/whitelist_main.conf
+++ b/ss.conf/whitelist_main.conf
@@ -8,10 +8,12 @@ loglevel = notify
 Proxy = custom,127.0.0.1,1080,aes-256-cfb,your_password_here,https://github.com/R0uter/ss.conf-for-surge/raw/master/ss.module
 
 [Rule]
+// For cn domains
+DOMAIN-SUFFIX,cn,DIRECT
 
 // AD Block
 // thx  https://gist.github.com/iyee/2e27c124af2f7a4f0d5a 
-// updated on 2016-02-28 23:02:00
+// updated on 2016-03-02 16:50:18
 
 DOMAIN,syndication.twitter.com,REJECT
 DOMAIN,adlog.flurry.com,REJECT
@@ -9791,5 +9793,4 @@ IP-CIDR,127.0.0.0/8,DIRECT
 IP-CIDR,172.16.0.0/12,DIRECT
 IP-CIDR,192.168.0.0/16,DIRECT
 
-GEOIP,CN,DIRECT
 FINAL,Proxy
