change config file name

--- a/configFileHere/gfwlist_main.conf
+++ b/configFileHere/gfwlist_main.conf
@@ -11,10 +11,12 @@ Proxy = custom,127.0.0.1,1080,aes-256-cfb,your_password_here,https://github.com/
 //for Google blogspot 
 DOMAIN-KEYWORD,google,Proxy,force-remote-dns
 DOMAIN-KEYWORD,blogspot,Proxy,force-remote-dns
+//for BBC 
+DOMAIN-KEYWORD,bbc,Proxy,force-remote-dns
 
 // AD Block
 // thx  https://gist.github.com/iyee/2e27c124af2f7a4f0d5a 
-// updated on 2016-03-02 16:50:18
+// updated on 2016-03-04 13:31:05
 
 DOMAIN,syndication.twitter.com,REJECT
 DOMAIN,adlog.flurry.com,REJECT
@@ -202,7 +204,7 @@ DOMAIN-SUFFIX,amazon-adsystem.com,REJECT
 
 // proxy list from gfwlist!
 // SS config file for surge with gfw list 
-// updated on 2016-03-02 16:49:34
+// updated on 2016-03-04 13:31:03
 
 DOMAIN-SUFFIX,85.17.73.31,Proxy,force-remote-dns
 DOMAIN-SUFFIX,agnesb.fr,Proxy,force-remote-dns
