--- a/configFileHere/whitelist_main.conf
+++ b/configFileHere/whitelist_main.conf
@@ -1,5 +1,5 @@
 [General]
-skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local
+skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local,e.crashlytics.com
 bypass-tun = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12
 dns-server = 114.114.114.114, 114.114.115.115
 loglevel = notify
@@ -13,7 +13,7 @@ DOMAIN-SUFFIX,cn,DIRECT
 
 // AD Block
 // thx  https://gist.github.com/iyee/2e27c124af2f7a4f0d5a 
-// updated on 2016-03-02 16:50:18
+// updated on 2016-03-04 13:31:05
 
 DOMAIN,syndication.twitter.com,REJECT
 DOMAIN,adlog.flurry.com,REJECT
@@ -9779,18 +9779,36 @@ DOMAIN-SUFFIX,233.wiki,DIRECT
 DOMAIN-SUFFIX,qingcdn.com,DIRECT
 DOMAIN-SUFFIX,logcg.com,DIRECT
 DOMAIN-SUFFIX,douyutv.com,DIRECT
+DOMAIN-SUFFIX,bennythink.com,DIRECT
+DOMAIN-SUFFIX,linuxeden.com,DIRECT
+DOMAIN-SUFFIX,cn163.net,DIRECT
+DOMAIN-SUFFIX,weiphone.net,DIRECT
+DOMAIN-SUFFIX,fengbuy.com,DIRECT
+DOMAIN-SUFFIX,smartisan.com,DIRECT
+DOMAIN-SUFFIX,cloudxns.net,DIRECT
+DOMAIN-SUFFIX,myserverhosts.com,DIRECT
+DOMAIN-SUFFIX,softaculous.com,DIRECT
+DOMAIN-SUFFIX,0773188.com,DIRECT
+DOMAIN-SUFFIX,maorui.org,DIRECT
+DOMAIN-SUFFIX,coding.net,DIRECT
+DOMAIN-SUFFIX,u17i.com,DIRECT
+DOMAIN-SUFFIX,runoob.com,DIRECT
+DOMAIN-SUFFIX,10086.com,DIRECT
+DOMAIN-SUFFIX,aubdas.com,DIRECT
+DOMAIN-SUFFIX,videocc.net,DIRECT
+DOMAIN-SUFFIX,crashlytics.com,DIRECT
+DOMAIN-SUFFIX,rrmj.tv,DIRECT
 
 
-// Telegram
-IP-CIDR,91.108.4.0/22,Proxy,no-resolve
-IP-CIDR,91.108.56.0/22,Proxy,no-resolve
-IP-CIDR,109.239.140.0/24,Proxy,no-resolve
-IP-CIDR,149.154.160.0/20,Proxy,no-resolve
+
 
 // LAN
 IP-CIDR,10.0.0.0/8,DIRECT
 IP-CIDR,127.0.0.0/8,DIRECT
 IP-CIDR,172.16.0.0/12,DIRECT
 IP-CIDR,192.168.0.0/16,DIRECT
+
+// last chance
+GEOIP,CN,DIRECT
 
 FINAL,Proxy
