no zuo no die why I try 0.0

--- a/configFileHere/whitelist_main.conf
+++ b/configFileHere/whitelist_main.conf
@@ -9837,7 +9837,7 @@ GEOIP,CN,DIRECT
 
 FINAL,Proxy
 
-[URL Rewrite]
-^http://www.google.cn http://www.google.com.hk
-^http://m.baidu.com/s\?from=1099b&word= http://google.com/search\?q=
-^http://www.baidu.com/s\?wd= http://google.com/search\?q=
+// [URL Rewrite]
+// ^http://www.google.cn http://www.google.com.hk
+// ^http://m.baidu.com/s\?from=1099b&word= http://google.com/search\?q=
+// ^http://www.baidu.com/s\?wd= http://google.com/search\?q=
