--- a/configFileHere/gfwlist_main.conf
+++ b/configFileHere/gfwlist_main.conf
@@ -16,7 +16,7 @@ DOMAIN-KEYWORD,bbc,Proxy,force-remote-dns
 
 // AD Block
 // thx  https://gist.github.com/iyee/2e27c124af2f7a4f0d5a 
-// updated on 2016-03-26 22:02:55
+// updated on 2016-04-01 19:35:42
 
 DOMAIN,syndication.twitter.com,REJECT
 DOMAIN,adlog.flurry.com,REJECT
@@ -182,7 +182,6 @@ DOMAIN,ucstat.baidu.com,REJECT
 DOMAIN,union.baidu.com,REJECT
 DOMAIN-SUFFIX,baidustatic.com,REJECT
 DOMAIN-SUFFIX,pos.baidu.com,REJECT
-DOMAIN,union.m.jd.com,REJECT
 DOMAIN,acjs.aliyun.com,REJECT
 DOMAIN,hydra.alibaba.com,REJECT
 DOMAIN-SUFFIX,simaba.taobao.com,REJECT
@@ -204,7 +203,7 @@ DOMAIN-SUFFIX,amazon-adsystem.com,REJECT
 
 // proxy list from gfwlist!
 // SS config file for surge with gfw list 
-// updated on 2016-03-26 22:02:39
+// updated on 2016-04-01 19:35:30
 
 DOMAIN-SUFFIX,85.17.73.31,Proxy,force-remote-dns
 DOMAIN-SUFFIX,agnesb.fr,Proxy,force-remote-dns
@@ -3875,7 +3874,7 @@ IP-CIDR,192.168.0.0/16,DIRECT
 
 FINAL,DIRECT
 
-// [URL Rewrite]
-// ^http://www.google.cn http://www.google.com.hk
-// ^http://m.baidu.com/s\?from=1099b&word= http://google.com/search\?q=
-// ^http://www.baidu.com/s\?wd= http://google.com/search\?q=
+ [URL Rewrite]
+ ^http://www.google.cn http://www.google.com.hk
+ ^http://m.baidu.com/s\?from=1099b&word= http://google.com/search\?q=
+ ^http://www.baidu.com/s\?wd= http://google.com/search\?q=
