--- a/configFileHere/whitelist_main.conf
+++ b/configFileHere/whitelist_main.conf
@@ -13,7 +13,7 @@ DOMAIN-SUFFIX,cn,DIRECT
 
 // AD Block
 // thx  https://gist.github.com/iyee/2e27c124af2f7a4f0d5a 
-// updated on 2016-03-26 22:02:55
+// updated on 2016-04-01 19:35:42
 
 DOMAIN,syndication.twitter.com,REJECT
 DOMAIN,adlog.flurry.com,REJECT
@@ -179,7 +179,6 @@ DOMAIN,ucstat.baidu.com,REJECT
 DOMAIN,union.baidu.com,REJECT
 DOMAIN-SUFFIX,baidustatic.com,REJECT
 DOMAIN-SUFFIX,pos.baidu.com,REJECT
-DOMAIN,union.m.jd.com,REJECT
 DOMAIN,acjs.aliyun.com,REJECT
 DOMAIN,hydra.alibaba.com,REJECT
 DOMAIN-SUFFIX,simaba.taobao.com,REJECT
@@ -9837,7 +9836,7 @@ GEOIP,CN,DIRECT
 
 FINAL,Proxy
 
-// [URL Rewrite]
-// ^http://www.google.cn http://www.google.com.hk
-// ^http://m.baidu.com/s\?from=1099b&word= http://google.com/search\?q=
-// ^http://www.baidu.com/s\?wd= http://google.com/search\?q=
+ [URL Rewrite]
+ ^http://www.google.cn http://www.google.com.hk
+ ^http://m.baidu.com/s\?from=1099b&word= http://google.com/search\?q=
+ ^http://www.baidu.com/s\?wd= http://google.com/search\?q=
