--- a/configFileHere/whitelist.conf
+++ b/configFileHere/whitelist.conf
@@ -5,7 +5,14 @@ dns-server = 114.114.114.114, 114.114.115.115
 loglevel = notify
 
 [Proxy]
-Proxy = custom,127.0.0.1,1080,aes-256-cfb,your_password_here,https://github.com/R0uter/ss.conf-for-surge/raw/master/ss.module
+💊DIRECT = direct
+🇭🇰HK = custom,your_server_here,your_port_here,aes-256-cfb,your_password_here,https://github.com/R0uter/ss.conf-for-surge/raw/master/ss.module
+🇸🇬SG = custom,your_server_here,your_port_here,aes-256-cfb,your_password_here,https://github.com/R0uter/ss.conf-for-surge/raw/master/ss.module
+🇯🇵JP = custom,your_server_here,your_port_here,aes-256-cfb,your_password_here,https://github.com/R0uter/ss.conf-for-surge/raw/master/ss.module
+🇺🇸US = custom,your_server_here,your_port_here,aes-256-cfb,your_password_here,https://github.com/R0uter/ss.conf-for-surge/raw/master/ss.module
+
+[Proxy Group]
+Proxy = select,💊DIRECT,🇭🇰HK,🇸🇬SG,🇯🇵JP,🇺🇸US
 
 [Rule]
 // For cn domains
@@ -13,7 +20,7 @@ DOMAIN-SUFFIX,cn,DIRECT
 
 // AD Block
 // thx  https://gist.github.com/iyee/2e27c124af2f7a4f0d5a 
-// updated on 2016-04-01 19:35:42
+// updated on 2016-04-01 21:38:59
 
 DOMAIN,syndication.twitter.com,REJECT
 DOMAIN,adlog.flurry.com,REJECT
