whitelist better for surge mac, not ios! Its too big for now~

--- a/configFileHere/gfwlist.conf
+++ b/configFileHere/gfwlist.conf
@@ -23,7 +23,7 @@ DOMAIN-KEYWORD,bbc,Proxy,force-remote-dns
 
 // AD Block
 // thx  https://gist.github.com/iyee/2e27c124af2f7a4f0d5a 
-// updated on 2016-04-01 21:38:59
+// updated on 2016-04-14 20:15:48
 
 DOMAIN,syndication.twitter.com,REJECT
 DOMAIN,adlog.flurry.com,REJECT
@@ -210,9 +210,10 @@ DOMAIN-SUFFIX,amazon-adsystem.com,REJECT
 
 // proxy list from gfwlist!
 // SS config file for surge with gfw list 
-// updated on 2016-04-01 21:38:48
+// updated on 2016-04-14 20:15:43
 
 DOMAIN-SUFFIX,85.17.73.31,Proxy,force-remote-dns
+DOMAIN-SUFFIX,adorama.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,agnesb.fr,Proxy,force-remote-dns
 DOMAIN-SUFFIX,akiba-web.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,alien-ufos.com,Proxy,force-remote-dns
@@ -225,12 +226,13 @@ DOMAIN-SUFFIX,beeg.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,boysmaster.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,carfax.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,centauro.com.br,Proxy,force-remote-dns
-DOMAIN-SUFFIX,daftpunk.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,crossfire.co.kr,Proxy,force-remote-dns
 DOMAIN-SUFFIX,darpa.mil,Proxy,force-remote-dns
 DOMAIN-SUFFIX,desipro.de,Proxy,force-remote-dns
 DOMAIN-SUFFIX,img.dlsite.jp,Proxy,force-remote-dns
 DOMAIN-SUFFIX,share.dmhy.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dmm.co.jp,Proxy,force-remote-dns
+DOMAIN-SUFFIX,fakku.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fastpic.ru,Proxy,force-remote-dns
 DOMAIN-SUFFIX,financetwitter.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,flipboard.com,Proxy,force-remote-dns
@@ -260,6 +262,8 @@ DOMAIN-SUFFIX,longtoes.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,www.m-sport.co.uk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,macgamestore.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,madonna-av.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,mangafox.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,mangafox.me,Proxy,force-remote-dns
 DOMAIN-SUFFIX,metarthunter.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mfxmedia.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,monster.com,Proxy,force-remote-dns
@@ -296,6 +300,7 @@ DOMAIN-SUFFIX,tma.co.jp,Proxy,force-remote-dns
 DOMAIN-SUFFIX,toshiba.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,turntable.fm,Proxy,force-remote-dns
 DOMAIN-SUFFIX,twerkingbutt.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,vegasred.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,vevo.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ecsm.vs.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wanz-factory.com,Proxy,force-remote-dns
@@ -318,6 +323,7 @@ DOMAIN-SUFFIX,admob.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,agoogleaday.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,androidify.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,appspot.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,certificate-transparency.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,chrome.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,chromecast.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,chromeexperiments.com,Proxy,force-remote-dns
@@ -325,6 +331,7 @@ DOMAIN-SUFFIX,chromercise.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,data-vocabulary.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,deja.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,g.co,Proxy,force-remote-dns
+DOMAIN-SUFFIX,get.how,Proxy,force-remote-dns
 DOMAIN-SUFFIX,getmdl.io,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ggpht.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gmail.com,Proxy,force-remote-dns
@@ -367,6 +374,7 @@ DOMAIN-SUFFIX,youtube.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,youtube-nocookie.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ytimg.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,zynamics.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,kat.cr,Proxy,force-remote-dns
 DOMAIN-SUFFIX,naughtyamerica.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,0rz.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,0to255.com,Proxy,force-remote-dns
@@ -547,6 +555,7 @@ DOMAIN-SUFFIX,arethusa.su,Proxy,force-remote-dns
 DOMAIN-SUFFIX,arlingtoncemetery.mil,Proxy,force-remote-dns
 DOMAIN-SUFFIX,army.mil,Proxy,force-remote-dns
 DOMAIN-SUFFIX,artsy.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,asacp.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,asahichinese.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,asdfg.jp,Proxy,force-remote-dns
 DOMAIN-SUFFIX,asg.to,Proxy,force-remote-dns
@@ -609,6 +618,7 @@ DOMAIN-SUFFIX,bbsmo.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bbsone.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bcc.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bcchinese.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,bcmorning.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bebo.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,beevpn.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,behindkink.com,Proxy,force-remote-dns
@@ -923,6 +933,8 @@ DOMAIN-SUFFIX,cnd.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wiki.cnitter.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cnn.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cnpolitics.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,cn-proxy.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,cnproxy.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,blog.cnyes.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,news.cnyes.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cochina.co,Proxy,force-remote-dns
@@ -1037,6 +1049,7 @@ DOMAIN-SUFFIX,furl.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dipity.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,directcreative.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,discogs.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,search.disconnect.me,Proxy,force-remote-dns
 DOMAIN-SUFFIX,discuss.com.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,disp.cc,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dit-inc.us,Proxy,force-remote-dns
@@ -1070,6 +1083,7 @@ DOMAIN-SUFFIX,dowei.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,doxygen.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dphk.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dpp.org.tw,Proxy,force-remote-dns
+DOMAIN-SUFFIX,dpr.info,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dreammask.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,drepung.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,drgan.net,Proxy,force-remote-dns
@@ -1125,6 +1139,7 @@ DOMAIN-SUFFIX,eastturkistangovernmentinexile.us,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ebookbrowse.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ebookee.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ecministry.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,economist.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bbs.ecstart.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,edgecastcdn.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,edicypages.com,Proxy,force-remote-dns
@@ -1147,6 +1162,7 @@ DOMAIN-SUFFIX,emacsblog.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,emilylau.org.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,empfil.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,emule-ed2k.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,emulefans.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,emuparadise.me,Proxy,force-remote-dns
 DOMAIN-SUFFIX,enewstree.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,chinese.engadget.com,Proxy,force-remote-dns
@@ -1180,6 +1196,7 @@ DOMAIN-SUFFIX,wiki.esu.im,Proxy,force-remote-dns
 DOMAIN-SUFFIX,etaa.org.au,Proxy,force-remote-dns
 DOMAIN-SUFFIX,etaiwannews.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,etizer.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,etokki.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ettoday.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,etvonline.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,eu.org,Proxy,force-remote-dns
@@ -1200,6 +1217,7 @@ DOMAIN-SUFFIX,eyevio.jp,Proxy,force-remote-dns
 DOMAIN-SUFFIX,eyny.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ezpc.tk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ezpeer.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,facebook.br,Proxy,force-remote-dns
 DOMAIN-SUFFIX,facebook.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,connect.facebook.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,facebook.hu,Proxy,force-remote-dns
@@ -1210,7 +1228,6 @@ DOMAIN-SUFFIX,facesoftibetanselfimmolators.info,Proxy,force-remote-dns
 DOMAIN-SUFFIX,facesofnyfw.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,faithfuleye.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,faiththedog.info,Proxy,force-remote-dns
-DOMAIN-SUFFIX,fakku.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,falun-co.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,falunart.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,falunasia.info,Proxy,force-remote-dns
@@ -1381,6 +1398,7 @@ DOMAIN-SUFFIX,frontlinedefenders.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fscked.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fsurf.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ftchinese.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,fucd.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fuckcnnic.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fuckgfw.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fullerconsideration.com,Proxy,force-remote-dns
@@ -1445,6 +1463,7 @@ DOMAIN-SUFFIX,getsocialscope.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gfbv.de,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gfsale.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gfw.org.ua,Proxy,force-remote-dns
+DOMAIN-SUFFIX,gfw.press,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ggssl.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ghost.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ghostpath.com,Proxy,force-remote-dns
@@ -1706,6 +1725,7 @@ DOMAIN-SUFFIX,htmldog.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hua-yue.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,huaglad.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,huanghuagang.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,huangyiyu.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,huaren.us,Proxy,force-remote-dns
 DOMAIN-SUFFIX,huaxia-news.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,huaxiabao.org,Proxy,force-remote-dns
@@ -1786,7 +1806,9 @@ DOMAIN-SUFFIX,imkev.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,imlive.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,impp.mn,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tech2.in.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,in99.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,incredibox.fr,Proxy,force-remote-dns
+DOMAIN-SUFFIX,indiandefensenews.in,Proxy,force-remote-dns
 DOMAIN-SUFFIX,timesofindia.indiatimes.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,indiemerch.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,info-graf.fr,Proxy,force-remote-dns
@@ -1915,11 +1937,13 @@ DOMAIN-SUFFIX,kagyuoffice.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kagyuoffice.org.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kaiyuan.de,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kakao.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,kannewyork.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kanshifang.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kanzhongguo.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kanzhongguo.eu,Proxy,force-remote-dns
 DOMAIN-SUFFIX,karayou.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,karkhung.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,karmapa.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,karmapa-teachings.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kba-tx.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kcsoftwares.com,Proxy,force-remote-dns
@@ -1951,6 +1975,7 @@ DOMAIN-SUFFIX,konachan.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,www.konachan.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,koolsolutions.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,koornk.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,gojet.krtco.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ksnews.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kui.name,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kuliwang.com,Proxy,force-remote-dns
@@ -1967,6 +1992,7 @@ DOMAIN-SUFFIX,ladbrokes.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,labiennale.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,lagranepoca.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,lalulalu.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,lamayeshe.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,www.lamenhu.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,lamnia.co.uk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,lamrim.com,Proxy,force-remote-dns
@@ -2105,6 +2131,7 @@ DOMAIN-SUFFIX,mcreasite.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,md-t.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mediafire.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mediafreakcity.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,medium.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,meetup.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mefeedia.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,megaporn.com,Proxy,force-remote-dns
@@ -2237,6 +2264,8 @@ DOMAIN-SUFFIX,naacoalition.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,old.nabble.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,naitik.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nakuz.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,nalandabodhi.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,nalandawest.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,namsisi.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nanyang.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nanyangpost.com,Proxy,force-remote-dns
@@ -2293,10 +2322,10 @@ DOMAIN-SUFFIX,nexttv.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nga.mil,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ngensis.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nhentai.net,Proxy,force-remote-dns
-DOMAIN-SUFFIX,nicovideo.jp,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nighost.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,av.nightlife141.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ninecommentaries.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,ninjacloak.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nintendium.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,taiwanyes.ning.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,usmgtcg.ning.com,Proxy,force-remote-dns
@@ -2318,6 +2347,7 @@ DOMAIN-SUFFIX,nownews.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nowtorrents.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,noypf.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,npa.go.jp,Proxy,force-remote-dns
+DOMAIN-SUFFIX,npnt.me,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nps.gov,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nrk.no,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ntd.tv,Proxy,force-remote-dns
@@ -2533,6 +2563,7 @@ DOMAIN-SUFFIX,pornoxo.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,pornrapidshare.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,pornstarclub.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,porntube.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,porntubenews.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,porntvblog.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,pornvisit.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,portablevpn.nl,Proxy,force-remote-dns
@@ -2696,6 +2727,7 @@ DOMAIN-SUFFIX,rfi.fr,Proxy,force-remote-dns
 DOMAIN-SUFFIX,rfi.my,Proxy,force-remote-dns
 DOMAIN-SUFFIX,rhcloud.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,vds.rightster.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,rigpa.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,rileyguide.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,riku.me,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ritouki.jp,Proxy,force-remote-dns
@@ -2719,6 +2751,7 @@ DOMAIN-SUFFIX,rsf.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,rsf-chinese.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,rsgamen.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,rssmeme.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,rtalabel.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,rthk.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,rthk.org.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,rti.org.tw,Proxy,force-remote-dns
@@ -2738,6 +2771,7 @@ DOMAIN-SUFFIX,sadpanda.us,Proxy,force-remote-dns
 DOMAIN-SUFFIX,safervpn.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,saiq.me,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sakuralive.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,sakya.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,salvation.org.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,samair.ru,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sambhota.org,Proxy,force-remote-dns
@@ -2806,6 +2840,7 @@ DOMAIN-SUFFIX,shenshou.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,shenyun.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,shenyunperformingarts.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,shenzhoufilm.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,sherabgyaltsen.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,shicheng.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,shinychan.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,shitaotv.org,Proxy,force-remote-dns
@@ -2968,6 +3003,7 @@ DOMAIN-SUFFIX,student.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,studentsforafreetibet.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,stumbleupon.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,stupidvideos.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,panamapapers.sueddeutsche.de,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sugarsync.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,suissl.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,summify.com,Proxy,force-remote-dns
@@ -3153,6 +3189,7 @@ DOMAIN-SUFFIX,tibetcorps.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tibetexpress.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tibetfocus.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tibetfund.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,tibethaus.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tibethouse.jp,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tibethouse.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tibethouse.us,Proxy,force-remote-dns
@@ -3799,6 +3836,7 @@ DOMAIN-SUFFIX,share.youthwant.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,topic.youthwant.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,youporn.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,youporngay.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,yourlisten.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,youtubecn.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,youversion.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,blog.youxu.info,Proxy,force-remote-dns
