--- a/configFileHere/whitelist.conf
+++ b/configFileHere/whitelist.conf
@@ -1,7 +1,7 @@
 [General]
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local,e.crashlytics.com
 bypass-tun = 0.0.0.0/8, 1.0.0.0/9, 1.160.0.0/11, 1.192.0.0/11, 10.0.0.0/8, 14.0.0.0/11, 14.96.0.0/11, 14.128.0.0/11, 14.192.0.0/11, 27.0.0.0/10, 27.96.0.0/11, 27.128.0.0/9, 36.0.0.0/10, 36.96.0.0/11, 36.128.0.0/9, 39.0.0.0/11, 39.64.0.0/10, 39.128.0.0/10, 42.0.0.0/8, 43.224.0.0/11, 45.64.0.0/10, 47.64.0.0/10, 49.0.0.0/9, 49.128.0.0/11, 49.192.0.0/10, 54.192.0.0/11, 58.0.0.0/9, 58.128.0.0/11, 58.192.0.0/10, 59.32.0.0/11, 59.64.0.0/10, 59.128.0.0/9, 60.0.0.0/10, 60.160.0.0/11, 60.192.0.0/10, 61.0.0.0/10, 61.64.0.0/11, 61.128.0.0/10, 61.224.0.0/11, 100.64.0.0/10, 101.0.0.0/9, 101.128.0.0/11, 101.192.0.0/10, 103.0.0.0/10, 103.192.0.0/10, 106.0.0.0/9, 106.224.0.0/11, 110.0.0.0/7, 112.0.0.0/9, 112.128.0.0/11, 112.192.0.0/10, 113.0.0.0/9, 113.128.0.0/11, 113.192.0.0/10, 114.0.0.0/9, 114.128.0.0/11, 114.192.0.0/10, 115.0.0.0/8, 116.0.0.0/8, 117.0.0.0/9, 117.128.0.0/10, 118.0.0.0/11, 118.64.0.0/10, 118.128.0.0/9, 119.0.0.0/9, 119.128.0.0/10, 119.224.0.0/11, 120.0.0.0/10, 120.64.0.0/11, 120.128.0.0/11, 120.192.0.0/10, 121.0.0.0/9, 121.192.0.0/10, 122.0.0.0/7, 124.0.0.0/8, 125.0.0.0/9, 125.160.0.0/11, 125.192.0.0/10, 127.0.0.0/8, 139.0.0.0/11, 139.128.0.0/9, 140.64.0.0/11, 140.128.0.0/11, 140.192.0.0/10, 144.0.0.0/10, 144.96.0.0/11, 144.224.0.0/11, 150.0.0.0/11, 150.96.0.0/11, 150.128.0.0/11, 150.192.0.0/10, 152.96.0.0/11, 153.0.0.0/10, 153.96.0.0/11, 157.0.0.0/10, 157.96.0.0/11, 157.128.0.0/11, 157.224.0.0/11, 159.224.0.0/11, 161.192.0.0/11, 162.96.0.0/11, 163.0.0.0/10, 163.96.0.0/11, 163.128.0.0/10, 163.192.0.0/11, 166.96.0.0/11, 167.128.0.0/10, 167.192.0.0/11, 168.160.0.0/11, 169.254.0.0/16, 171.0.0.0/9, 171.192.0.0/11, 172.16.0.0/12, 175.0.0.0/9, 175.128.0.0/10, 180.64.0.0/10, 180.128.0.0/9, 182.0.0.0/8, 183.0.0.0/10, 183.64.0.0/11, 183.128.0.0/9, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.96.0.0/11, 192.160.0.0/11, 198.18.0.0/15, 198.51.100.0/24, 202.0.0.0/9, 202.128.0.0/10, 202.192.0.0/11, 203.0.0.0/9, 203.128.0.0/10, 203.192.0.0/11, 210.0.0.0/10, 210.64.0.0/11, 210.160.0.0/11, 210.192.0.0/11, 211.64.0.0/10, 211.128.0.0/10, 218.0.0.0/9, 218.160.0.0/11, 218.192.0.0/10, 219.64.0.0/11, 219.128.0.0/11, 219.192.0.0/10, 220.96.0.0/11, 220.128.0.0/9, 221.0.0.0/11, 221.96.0.0/11, 221.128.0.0/9, 222.0.0.0/8, 223.0.0.0/11, 223.64.0.0/10, 223.128.0.0/9
-dns-server = 114.114.114.114, 114.114.115.115
+dns-server = 115.29.49.136
 loglevel = notify
 
 [Proxy]
@@ -20,38 +20,52 @@ DOMAIN-SUFFIX,cn,DIRECT
 
 // AD Block
 // thx  https://gist.github.com/iyee/2e27c124af2f7a4f0d5a 
-// updated on 2016-04-24 23:18:38
+// updated on 2016-05-06 13:07:06
 
-DOMAIN,syndication.twitter.com,REJECT
+DOMAIN-KEYWORD,analytics,REJECT
+DOMAIN-KEYWORD,syndication,REJECT
+DOMAIN,csi.gstatic.com,REJECT
+DOMAIN,static.googleadsserving.cn,REJECT
+DOMAIN-SUFFIX,doubleclick.net,REJECT
+DOMAIN-SUFFIX,googleadservices.com,REJECT
+DOMAIN-SUFFIX,googletagservices.com,REJECT
 DOMAIN,adlog.flurry.com,REJECT
 DOMAIN,ads.flurry.com,REJECT
 DOMAIN,alexa.links.cn,REJECT
+DOMAIN,api.amplitude.com,REJECT
 DOMAIN,api.instabug.com,REJECT
+DOMAIN,api.mixpanel.com,REJECT
 DOMAIN,api.segment.io,REJECT
+DOMAIN,app.roximity.com,REJECT
 DOMAIN,app.sysdigcloud.com,REJECT
 DOMAIN,bam.nr-data.net,REJECT
 DOMAIN,bi-collector.oneapm.com,REJECT
 DOMAIN,cdn.mxpnl.com,REJECT
 DOMAIN,collector.githubapp.com,REJECT
 DOMAIN,counter.kingsoft.com,REJECT
+DOMAIN,data.flurry.com,REJECT
+DOMAIN,engine.mobileapptracking.com,REJECT
 DOMAIN,js-agent.newrelic.com,REJECT
 DOMAIN,log.cmbchina.com,REJECT
+DOMAIN,log.tapatalk.com,REJECT
+DOMAIN,log.umsns.com,REJECT
 DOMAIN,pageviewp.icbc.com.cn,REJECT
 DOMAIN,pixel.wp.com,REJECT
 DOMAIN,sfsapi.micloud.xiaomi.net,REJECT
-DOMAIN,zhihu-analytics.zhihu.com,REJECT
+DOMAIN,stat.api.dianping.com,REJECT
 DOMAIN-KEYWORD,cnzz,REJECT
 DOMAIN-KEYWORD,tongji,REJECT
 DOMAIN-KEYWORD,trace,REJECT
 DOMAIN-KEYWORD,track,REJECT
-DOMAIN-KEYWORD,traffic,REJECT
 DOMAIN-KEYWORD,usage,REJECT
 DOMAIN-SUFFIX,51.la,REJECT
 DOMAIN-SUFFIX,adjust.com,REJECT
 DOMAIN-SUFFIX,adjust.io,REJECT
+DOMAIN-SUFFIX,alipaylog.com,REJECT
 DOMAIN-SUFFIX,beacon.tingyun.com,REJECT
 DOMAIN-SUFFIX,cmcore.com,REJECT
 DOMAIN-SUFFIX,coremetrics.com,REJECT
+DOMAIN-SUFFIX,irs01.com,REJECT
 DOMAIN-SUFFIX,madmini.com,REJECT
 DOMAIN-SUFFIX,mmstat.com,REJECT
 DOMAIN-SUFFIX,optimizelyapis.com,REJECT
@@ -61,9 +75,9 @@ DOMAIN-SUFFIX,statcounter.com,REJECT
 DOMAIN-SUFFIX,wrating.com,REJECT
 DOMAIN,ads.mopub.com,REJECT
 DOMAIN,api.adform.com,REJECT
+DOMAIN,api.tapstream.com,REJECT
 DOMAIN,ark.letv.com,REJECT
 DOMAIN,e.apsalar.com,REJECT
-DOMAIN,syndication.streamads.yahoo.com,REJECT
 DOMAIN-KEYWORD,openx,REJECT
 DOMAIN-SUFFIX,99click.com,REJECT
 DOMAIN-SUFFIX,acs86.com,REJECT
@@ -114,6 +128,7 @@ DOMAIN-SUFFIX,intely.cn,REJECT
 DOMAIN-SUFFIX,ipinyou.com,REJECT
 DOMAIN-SUFFIX,istreamsche.com,REJECT
 DOMAIN-SUFFIX,kejet.net,REJECT
+DOMAIN-SUFFIX,localytics.com,REJECT
 DOMAIN-SUFFIX,mediav.com,REJECT
 DOMAIN-SUFFIX,miaozhen.com,REJECT
 DOMAIN-SUFFIX,miidi.net,REJECT
@@ -130,6 +145,7 @@ DOMAIN-SUFFIX,qtmojo.com,REJECT
 DOMAIN-SUFFIX,quantserve.com,REJECT
 DOMAIN-SUFFIX,reachmax.cn,REJECT
 DOMAIN-SUFFIX,responsys.net,REJECT
+DOMAIN-SUFFIX,scorecardresearch.com,REJECT
 DOMAIN-SUFFIX,serving-sys.com,REJECT
 DOMAIN-SUFFIX,smartmad.com,REJECT
 DOMAIN-SUFFIX,smartadserver.com,REJECT
@@ -158,17 +174,18 @@ DOMAIN,lives.l.qq.com,REJECT
 DOMAIN,monitor.uu.qq.com,REJECT
 DOMAIN,omgmta.qq.com,REJECT
 DOMAIN,pingjs.qq.com,REJECT
+DOMAIN,pingma.qq.com,REJECT
 DOMAIN,tajs.qq.com,REJECT
 DOMAIN,tcss.qq.com,REJECT
 DOMAIN-SUFFIX,beacon.qq.com,REJECT
 DOMAIN-SUFFIX,pingtcss.qq.com,REJECT
 DOMAIN-SUFFIX,report.qq.com,REJECT
 DOMAIN,dsp.youdao.com,REJECT
-DOMAIN,analytics.163.com,REJECT
 DOMAIN,g.163.com,REJECT
 DOMAIN,temp.163.com,REJECT
 DOMAIN-SUFFIX,stat.ws.126.net,REJECT
 DOMAIN-SUFFIX,union.youdao.com,REJECT
+DOMAIN,baichuan.baidu.com,REJECT
 DOMAIN,cbjs.baidu.com,REJECT
 DOMAIN,cpro.baidu.com,REJECT
 DOMAIN,eclick.baidu.com,REJECT
@@ -187,6 +204,7 @@ DOMAIN,union.baidu.com,REJECT
 DOMAIN-SUFFIX,baidustatic.com,REJECT
 DOMAIN-SUFFIX,pos.baidu.com,REJECT
 DOMAIN,acjs.aliyun.com,REJECT
+DOMAIN,adash.m.taobao.com,REJECT
 DOMAIN,hydra.alibaba.com,REJECT
 DOMAIN-SUFFIX,simaba.taobao.com,REJECT
 DOMAIN,sax.sina.cn,REJECT
@@ -198,15 +216,15 @@ DOMAIN,adcontrol.tudou.com,REJECT
 DOMAIN,adplay.tudou.com,REJECT
 DOMAIN,stat.tudou.com,REJECT
 DOMAIN,stats.tudou.com,REJECT
-DOMAIN,static.diditaxi.com.cn,REJECT
 DOMAIN,d.dropbox.com,REJECT
 DOMAIN,dl-debug.dropbox.com,REJECT
+DOMAIN,logger.instagram.com,REJECT
 DOMAIN-SUFFIX,amazon-adsystem.com,REJECT
 
 
 
 // white list from dnsmasq_china_list!
-// updated on 2016-04-24 23:19:00DOMAIN-SUFFIX,6.com,DIRECT
+// updated on 2016-05-06 13:07:22DOMAIN-SUFFIX,6.com,DIRECT
 DOMAIN-SUFFIX,gold.net,DIRECT
 DOMAIN-SUFFIX,00.net,DIRECT
 DOMAIN-SUFFIX,0000738.com,DIRECT
