--- a/configFileHere/gfwlist.conf
+++ b/configFileHere/gfwlist.conf
@@ -1,6 +1,6 @@
 [General]
-skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local
-bypass-tun = 0.0.0.0/8, 1.0.0.0/9, 1.160.0.0/11, 1.192.0.0/11, 10.0.0.0/8, 14.0.0.0/11, 14.96.0.0/11, 14.128.0.0/11, 14.192.0.0/11, 27.0.0.0/10, 27.96.0.0/11, 27.128.0.0/9, 36.0.0.0/10, 36.96.0.0/11, 36.128.0.0/9, 39.0.0.0/11, 39.64.0.0/10, 39.128.0.0/10, 42.0.0.0/8, 43.224.0.0/11, 45.64.0.0/10, 47.64.0.0/10, 49.0.0.0/9, 49.128.0.0/11, 49.192.0.0/10, 54.192.0.0/11, 58.0.0.0/9, 58.128.0.0/11, 58.192.0.0/10, 59.32.0.0/11, 59.64.0.0/10, 59.128.0.0/9, 60.0.0.0/10, 60.160.0.0/11, 60.192.0.0/10, 61.0.0.0/10, 61.64.0.0/11, 61.128.0.0/10, 61.224.0.0/11, 100.64.0.0/10, 101.0.0.0/9, 101.128.0.0/11, 101.192.0.0/10, 103.0.0.0/10, 103.192.0.0/10, 106.0.0.0/9, 106.224.0.0/11, 110.0.0.0/7, 112.0.0.0/9, 112.128.0.0/11, 112.192.0.0/10, 113.0.0.0/9, 113.128.0.0/11, 113.192.0.0/10, 114.0.0.0/9, 114.128.0.0/11, 114.192.0.0/10, 115.0.0.0/8, 116.0.0.0/8, 117.0.0.0/9, 117.128.0.0/10, 118.0.0.0/11, 118.64.0.0/10, 118.128.0.0/9, 119.0.0.0/9, 119.128.0.0/10, 119.224.0.0/11, 120.0.0.0/10, 120.64.0.0/11, 120.128.0.0/11, 120.192.0.0/10, 121.0.0.0/9, 121.192.0.0/10, 122.0.0.0/7, 124.0.0.0/8, 125.0.0.0/9, 125.160.0.0/11, 125.192.0.0/10, 127.0.0.0/8, 139.0.0.0/11, 139.128.0.0/9, 140.64.0.0/11, 140.128.0.0/11, 140.192.0.0/10, 144.0.0.0/10, 144.96.0.0/11, 144.224.0.0/11, 150.0.0.0/11, 150.96.0.0/11, 150.128.0.0/11, 150.192.0.0/10, 152.96.0.0/11, 153.0.0.0/10, 153.96.0.0/11, 157.0.0.0/10, 157.96.0.0/11, 157.128.0.0/11, 157.224.0.0/11, 159.224.0.0/11, 161.192.0.0/11, 162.96.0.0/11, 163.0.0.0/10, 163.96.0.0/11, 163.128.0.0/10, 163.192.0.0/11, 166.96.0.0/11, 167.128.0.0/10, 167.192.0.0/11, 168.160.0.0/11, 169.254.0.0/16, 171.0.0.0/9, 171.192.0.0/11, 172.16.0.0/12, 175.0.0.0/9, 175.128.0.0/10, 180.64.0.0/10, 180.128.0.0/9, 182.0.0.0/8, 183.0.0.0/10, 183.64.0.0/11, 183.128.0.0/9, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.96.0.0/11, 192.160.0.0/11, 198.18.0.0/15, 198.51.100.0/24, 202.0.0.0/9, 202.128.0.0/10, 202.192.0.0/11, 203.0.0.0/9, 203.128.0.0/10, 203.192.0.0/11, 210.0.0.0/10, 210.64.0.0/11, 210.160.0.0/11, 210.192.0.0/11, 211.64.0.0/10, 211.128.0.0/10, 218.0.0.0/9, 218.160.0.0/11, 218.192.0.0/10, 219.64.0.0/11, 219.128.0.0/11, 219.192.0.0/10, 220.96.0.0/11, 220.128.0.0/9, 221.0.0.0/11, 221.96.0.0/11, 221.128.0.0/9, 222.0.0.0/8, 223.0.0.0/11, 223.64.0.0/10, 223.128.0.0/9
+skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, localhost, *.local
+bypass-tun = 192.168.0.0/16,10.0.0.0/8,172.16.0.0/12
 dns-server = 114.114.114.114, 114.114.115.115
 loglevel = notify
 
@@ -12,7 +12,13 @@ loglevel = notify
 🇺🇸US = custom,your_server_here,your_port_here,aes-256-cfb,your_password_here,https://github.com/R0uter/ss.conf-for-surge/raw/master/ss.module
 
 [Proxy Group]
+ChinaProxy = select,💊DIRECT,🇭🇰HK,🇸🇬SG,🇯🇵JP,🇺🇸US
 Proxy = select,💊DIRECT,🇭🇰HK,🇸🇬SG,🇯🇵JP,🇺🇸US
+
+
+//If you use list for surge mac, uncomment this lines to enable speed test function.
+//Proxy = select,💊DIRECT,@Auto,🇭🇰HK,🇸🇬SG,🇯🇵JP,🇺🇸US
+//@Auto = url-test,🇭🇰HK,🇸🇬SG,🇯🇵JP,🇺🇸US,url=http://www.gstatic.com/generate_204
 
 [Rule]
 //for Google blogspot 
@@ -23,7 +29,7 @@ DOMAIN-KEYWORD,bbc,Proxy,force-remote-dns
 
 // AD Block
 // thx  https://gist.github.com/iyee/2e27c124af2f7a4f0d5a 
-// updated on 2016-05-06 13:07:06
+// updated on 2016-05-08 14:09:40
 
 DOMAIN-KEYWORD,analytics,REJECT
 DOMAIN-KEYWORD,syndication,REJECT
@@ -228,7 +234,7 @@ DOMAIN-SUFFIX,amazon-adsystem.com,REJECT
 
 // proxy list from gfwlist!
 // SS config file for surge with gfw list 
-// updated on 2016-05-06 13:07:04
+// updated on 2016-05-08 14:09:37
 
 DOMAIN-SUFFIX,4tern.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,85.17.73.31,Proxy,force-remote-dns
@@ -284,6 +290,7 @@ DOMAIN-SUFFIX,javhuge.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,javlibrary.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,juliepost.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kawaiikawaii.jp,Proxy,force-remote-dns
+DOMAIN-SUFFIX,khatrimaza.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,longtoes.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,www.m-sport.co.uk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,macgamestore.com,Proxy,force-remote-dns
@@ -354,9 +361,10 @@ DOMAIN-SUFFIX,javmoo.xyz,Proxy,force-remote-dns
 DOMAIN-SUFFIX,javtag.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,javzoo.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,4irc.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,chatnook.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,deaftone.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,effers.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,t2.etowns.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,etowns.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,flnet.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gotgeeks.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,slyip.com,Proxy,force-remote-dns
@@ -374,6 +382,7 @@ DOMAIN-SUFFIX,chrome.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,chromecast.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,chromeexperiments.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,chromercise.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,chromium.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,com.google,Proxy,force-remote-dns
 DOMAIN-SUFFIX,data-vocabulary.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,deja.com,Proxy,force-remote-dns
@@ -456,6 +465,7 @@ DOMAIN-SUFFIX,1984bbs.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,1998cdp.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,1bao.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,1eew.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,1mobile.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,1pondo.tv,Proxy,force-remote-dns
 DOMAIN-SUFFIX,2-hand.info,Proxy,force-remote-dns
 DOMAIN-SUFFIX,2000fun.com,Proxy,force-remote-dns
@@ -770,6 +780,7 @@ DOMAIN-SUFFIX,boxunblog.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,boxunclub.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,boyfriendtv.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,br.st,Proxy,force-remote-dns
+DOMAIN-SUFFIX,brainyquote.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,brandonhutchinson.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,braumeister.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bravotube.net,Proxy,force-remote-dns
@@ -834,6 +845,7 @@ DOMAIN-SUFFIX,caobian.info,Proxy,force-remote-dns
 DOMAIN-SUFFIX,caochangqing.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cap.org.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cardinalkungfoundation.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,casadeltibetbcn.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,casatibet.org.mx,Proxy,force-remote-dns
 DOMAIN-SUFFIX,casinobellini.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cari.com.my,Proxy,force-remote-dns
@@ -959,10 +971,10 @@ DOMAIN-SUFFIX,chingcheong.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,chithu.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,chn.chosun.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,chrdnet.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,christianfreedom.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,christianstudy.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,christusrex.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,chromeadblock.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,chromium.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,chubun.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,chuizi.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,christiantimes.org.hk,Proxy,force-remote-dns
@@ -1148,6 +1160,7 @@ DOMAIN-SUFFIX,dolc.de,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dolf.org.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dollf.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,domain.club.tw,Proxy,force-remote-dns
+DOMAIN-SUFFIX,domaintoday.com.au,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dongtaiwang.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dongtaiwang.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dongyangjing.com,Proxy,force-remote-dns
@@ -1506,6 +1519,7 @@ DOMAIN-SUFFIX,gaforum.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,galenwu.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,game735.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gamebase.com.tw,Proxy,force-remote-dns
+DOMAIN-SUFFIX,gamejolt.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wiki.gamerp.jp,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gamer.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gamez.com.tw,Proxy,force-remote-dns
@@ -1902,6 +1916,7 @@ DOMAIN-SUFFIX,imageflea.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,imageshack.us,Proxy,force-remote-dns
 DOMAIN-SUFFIX,imagevenue.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,imagezilla.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,imb.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,www.imdb.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,imdb.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,img.ly,Proxy,force-remote-dns
@@ -2164,6 +2179,7 @@ DOMAIN-SUFFIX,livestream.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,livingonline.us,Proxy,force-remote-dns
 DOMAIN-SUFFIX,livingstream.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,livevideo.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,liwangyang.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,lizhizhuangbi.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,lkcn.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,localdomain.ws,Proxy,force-remote-dns
@@ -2252,6 +2268,7 @@ DOMAIN-SUFFIX,megavideo.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,megurineluka.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,meirixiaochao.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,melon-peach.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,meltoday.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,memehk.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,memorybbs.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,memrijttm.org,Proxy,force-remote-dns
@@ -2338,6 +2355,7 @@ DOMAIN-SUFFIX,mpettis.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mpfinance.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mpinews.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mrtweet.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,news.hk.msn.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,news.msn.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,msguancha.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mswe1.org,Proxy,force-remote-dns
@@ -2391,6 +2409,9 @@ DOMAIN-SUFFIX,uighur.narod.ru,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cyberghost.natado.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,national-lottery.co.uk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nationsonline.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,navyfamily.navy.mil,Proxy,force-remote-dns
+DOMAIN-SUFFIX,navyreserve.navy.mil,Proxy,force-remote-dns
+DOMAIN-SUFFIX,nko.navy.mil,Proxy,force-remote-dns
 DOMAIN-SUFFIX,usno.navy.mil,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nccwatch.org.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nch.com.tw,Proxy,force-remote-dns
@@ -2433,6 +2454,7 @@ DOMAIN-SUFFIX,nextmag.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nextmedia.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nexton-net.jp,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nexttv.com.tw,Proxy,force-remote-dns
+DOMAIN-SUFFIX,co.ng.mil,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nga.mil,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ngensis.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nhentai.net,Proxy,force-remote-dns
@@ -2804,8 +2826,7 @@ DOMAIN-SUFFIX,blog.ranxiang.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ranyunfei.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,rapbull.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,rapidgator.net,Proxy,force-remote-dns
-DOMAIN-SUFFIX,rapidshare8.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,rapidsharedata.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,rapidmoviez.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,rapidvpn.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,raremovie.cc,Proxy,force-remote-dns
 DOMAIN-SUFFIX,raremovie.net,Proxy,force-remote-dns
@@ -2962,6 +2983,7 @@ DOMAIN-SUFFIX,shenyun.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,shenyunperformingarts.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,shenzhoufilm.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sherabgyaltsen.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,shiatv.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,shicheng.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,shinychan.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,shitaotv.org,Proxy,force-remote-dns
@@ -2969,6 +2991,7 @@ DOMAIN-SUFFIX,shixiao.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,shizhao.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,shkspr.mobi,Proxy,force-remote-dns
 DOMAIN-SUFFIX,shodanhq.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,shop2000.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,shopping.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,showtime.jp,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ch.shvoong.com,Proxy,force-remote-dns
@@ -3104,6 +3127,7 @@ DOMAIN-SUFFIX,starp2p.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,startpage.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,state168.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,steel-storm.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,stepchina.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,stepmania.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ny.stgloballink.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sthoo.com,Proxy,force-remote-dns
@@ -3231,6 +3255,7 @@ DOMAIN-SUFFIX,telegramdownload.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,telegraph.co.uk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tenacy.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tew.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,thaicn.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,theatrum-belli.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,thebodyshop-usa.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,theblemish.com,Proxy,force-remote-dns
@@ -3340,6 +3365,7 @@ DOMAIN-SUFFIX,tibetrelieffund.co.uk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tibetsites.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tibetsociety.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tibetsun.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,tibetsupportgroup.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tibettimes.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tibetwrites.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ticket.com.tw,Proxy,force-remote-dns
@@ -3874,6 +3900,7 @@ DOMAIN-SUFFIX,xiaohexie.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,xiaolan.me,Proxy,force-remote-dns
 DOMAIN-SUFFIX,xiaoma.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,xiezhua.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,xihua.es,Proxy,force-remote-dns
 DOMAIN-SUFFIX,forum.xinbao.de,Proxy,force-remote-dns
 DOMAIN-SUFFIX,xing.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,xinmiao.com.hk,Proxy,force-remote-dns
@@ -4075,13 +4102,9 @@ IP-CIDR,23.20.0.0/14,Proxy
 IP-CIDR,50.16.0.0/14,Proxy
 IP-CIDR,67.202.0.0/18,Proxy
 
-// LAN
-IP-CIDR,10.0.0.0/8,DIRECT
-IP-CIDR,127.0.0.0/8,DIRECT
-IP-CIDR,172.16.0.0/12,DIRECT
-IP-CIDR,192.168.0.0/16,DIRECT
 
-FINAL,DIRECT
+
+FINAL,ChinaProxy
 
  [URL Rewrite]
  ^http://www.google.cn http://www.google.com.hk
